--- a/index.html
+++ b/index.html
@@ -12,11 +12,22 @@
   <script type="module">
     import '/fodoole.js';
 
-    fodoole.bindClickEvents(fodoole.config.clickEvents);
-    fodoole.bindScrollEvents(fodoole.config.scrollEvents);
-    fodoole.resetIdleTimer(fodoole.config.idleTime);
-    fodoole.bindIdleTimeEvents(fodoole.config.idleTime);
-    fodoole.bindTabEvents();
+    fodoole.initFodooleAnalytics({
+      analyticsEndpoint: '/log',
+      projectId: '123',
+      contentServingId: '0',
+      contentId: '-',
+      isPdp: true,
+      idleTime: 10_000,
+      clickEvents: [
+        { 'label': 'CLICK_H1', 'value': 'h1' },
+        { 'label': 'CLICK_BODY', 'value': 'body' },
+      ],
+      scrollEvents: [
+        { 'label': 'SCROLL_H1', 'value': 'h1' },
+        { 'label': 'SCROLL_BODY', 'value': 'body' },
+      ]
+    });
 
   </script>
 </body>
