--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <script type="module">
     import '/fodoole.js';
 
+    fodoole.fetchFodooleContent();
+
     fodoole.initPageSession({
       analyticsEndpoint: '/log',
       projectId: '123',
