--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Single Page Application</title>
+  <title>Dev Playground (SPA)</title>
 </head>
 
 <body>
