correctly tracking CONTENT_SERVED

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <script type="module">
     import '/qeen.js';
 
-    qeen.fetchQeenContent();
+    // qeen.fetchQeenContent();
+
+    qeen.setContentServed();
 
     qeen.initPageSession({
       analyticsEndpoint: '/log',
