--- a/test/public/index.html
+++ b/test/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>qeen (SPA)</title>
+  <title>Dev Playground (SPA)</title>
 </head>
 
 <body>
