--- a/examples/react/frontend/index.html
+++ b/examples/react/frontend/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://cdn.qeen.ai/sdk/qeen.js"></script>
+    <!-- <script src="https://cdn.qeen.ai/sdk/qeen.js"></script> --> 
+    <script src="http://localhost:4000/qeen.js"></script>
   </body>
 </html>
